# paxos

./: .gitignore  .ignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  bake.yml  config.yml  install.sh  toast.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
integration-tests/: test-0.sh  test-1.sh
src/: acceptor.rs  config.rs  main.rs  proposer.rs  protocol.rs  rpc.rs  state.rs  util.rs
