[package]
name = "paxos"
version = "1.0.7"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2021"
description = "An implementation of single-decree Paxos."
license = "MIT"
documentation = "https://github.com/stepchowfun/paxos"
homepage = "https://github.com/stepchowfun/paxos"
repository = "https://github.com/stepchowfun/paxos"
readme = "README.md"

[dependencies]
bincode = "1"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
rand = "0.8"
serde_yaml = "0.9"

[dependencies.clap]
version = "2"
features = ["wrap_help"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.textwrap]
version = "0.16"
features = ["hyphenation", "smawk", "terminal_size", "unicode-linebreak", "unicode-width"]

[dependencies.tokio]
version = "1"
features = ["full"]
