[package]
name = "paxos"
version = "1.1.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "An implementation of single-decree Paxos."
license = "MIT"
documentation = "https://github.com/stepchowfun/paxos"
homepage = "https://github.com/stepchowfun/paxos"
repository = "https://github.com/stepchowfun/paxos"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
env_logger = "0.11"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
textwrap = { version = "0.16", features = ["hyphenation", "smawk", "terminal_size", "unicode-linebreak", "unicode-width"] }
tokio = { version = "1", features = ["full"] }
