[package]
name = "paxos"
version = "1.1.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "An implementation of single-decree Paxos."
license = "MIT"
documentation = "https://github.com/stepchowfun/paxos"
homepage = "https://github.com/stepchowfun/paxos"
repository = "https://github.com/stepchowfun/paxos"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
env_logger = "0.11.10"
futures = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
log = "0.4.32"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
yaml_serde = "0.10.4"
textwrap = { version = "0.16.2", features = ["smawk", "terminal_size", "unicode-linebreak", "unicode-width"] }
tokio = { version = "1.52.3", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
